<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#062342"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/textViewReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/reg_option"
        android:textColor="#DADADA"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonUseEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_email" />

    <Button
        android:id="@+id/buttonUseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_name" />
</LinearLayout>